--- a/distr/index.html
+++ b/distr/index.html
@@ -29,22 +29,144 @@
             </div>
             <div class="main-header__title">
                 <h1>wELCOME on <span>mycompany</span></h1>
-                <p>We are a digital agency with years of experience and with extraordinary people</p>
+                <p>We are a digital agency with <b>years of experience</b> and with <b>extraordinary people</b></p>
             </div>
         </div>
     </header>
-    <section class="page__section page__section--white about-section">
+    <section class="section section--white about-section">
         <div class="about-section__wraper">
-            <div class="about-section__item">
+            <div class="about-section__item about-section__item--left">
                 <img src="../img/mac.png" alt="">
             </div>
-            <div class="about-section__item">
-                <img src="../img/mac.png" alt="">
+            <div class="about-section__item about-section__item--right">
+                <h2 class="about-section__item-title">
+                    Some words <b>about us</b>
+                </h2>
+                <p class="about-section__item-text">Lorem ipsum dolor sit amet, consectetur adipisicing
+                    elit. Doloribus ex quidem maiores ullam quis, at asperiores
+                    minus ad eaque maxime possimus .</p>
+                <ul class="about-section__item-advantages">
+                    <li class="about-section__item-advantage"><b>Mission - </b>We deliver uniqueness and quality</li>
+                    <li class="about-section__item-advantage"><b>Skills - </b>Delivering fast and excellent results</li>
+                    <li class="about-section__item-advantage"><b>Clients - </b>Satisfied clients thanks to our
+                        experience</li>
+                </ul>
             </div>
         </div>
 
     </section>
-
+    <section class="section team-section">
+        <div class="team-section__wraper">
+            <h2 class="section__title">Your team</h2>
+            <div class="team-section__grid">
+                <div class="team-section__card">
+                    <div class="team-section__card-image-wraper">
+                        <img src="../img/team/1.jpg" alt="man">
+                    </div>
+                    <h3 class="team-section__card-name">Vlad Ivanov</h3>
+                    <p class="team-section__card-post">Designer</p>
+                    <p class="team-section__card-text">Do not seek to change what has come before. Seek to create that
+                        which has not.</p>
+                </div>
+                <div class="team-section__card">
+                    <div class="team-section__card-image-wraper">
+                        <img src="../img/team/2.jpg" alt="man">
+                    </div>
+                    <h3 class="team-section__card-name">Bogdan Makarov</h3>
+                    <p class="team-section__card-post">Manager</p>
+                    <p class="team-section__card-text">Do not seek to change what has come before. Seek to create that
+                        which has not.</p>
+                </div>
+                <div class="team-section__card">
+                    <div class="team-section__card-image-wraper">
+                        <img src="../img/team/3.jpg" alt="man">
+                    </div>
+                    <h3 class="team-section__card-name">Max Belov</h3>
+                    <p class="team-section__card-post">SEO</p>
+                    <p class="team-section__card-text">Do not seek to change what has come before. Seek to create that
+                        which has not.</p>
+                </div>
+                <div class="team-section__card">
+                    <div class="team-section__card-image-wraper">
+                        <img src="../img/team/4.jpg" alt="man">
+                    </div>
+                    <h3 class="team-section__card-name">Pavel Konov</h3>
+                    <p class="team-section__card-post">Copywriter</p>
+                    <p class="team-section__card-text">Do not seek to change what has come before. Seek to create that
+                        which has not.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section section--white services-section">
+        <div class="services-section__wraper">
+            <h2 class="section__title">our services</h2>
+            <p class="section__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at
+                asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa
+                tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam
+                quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa
+                tenetur.
+            </p>
+            <div class="services-section__grid">
+                <div class="services-section__card">
+                    <div class="services-section__card-icon ">
+                    </div>
+                    <h3 class="services-section__card-title">Web design</h3>
+                    <p class="services-section__card-text">he first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..",
+                        comes from a line in section 1.10.32.</p>
+                </div>
+                <div class="services-section__card">
+                    <div class="services-section__card-icon">
+                    </div>
+                    <h3 class="services-section__card-title">Mobile apps</h3>
+                    <p class="services-section__card-text">he first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..",
+                        comes from a line in section 1.10.32.</p>
+                </div>
+                <div class="services-section__card">
+                    <div class="services-section__card-icon">
+                    </div>
+                    <h3 class="services-section__card-title">PHOTOGRAPHY</h3>
+                    <p class="services-section__card-text">he first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..",
+                        comes from a line in section 1.10.32.</p>
+                </div>
+                <div class="services-section__card">
+                    <div class="services-section__card-icon">
+                    </div>
+                    <h3 class="services-section__card-title">marketing</h3>
+                    <p class="services-section__card-text">he first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..",
+                        comes from a line in section 1.10.32.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section section clients-section">
+        <div class="clients-section__wraper">
+            <h2 class="section__title"><span>SOME OF OUR</span> CLIENTS</h2>
+        </div>
+    </section>
+    <section class="section section--white works-section">
+        <div class="works-section__wraper">
+            <h2 class="section__title"><span>take a look at</span> our work</h2>
+            <p class="section__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at
+                asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa
+                tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam
+                quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa
+                tenetur.
+            </p>
+        </div>
+    </section>
+    <section class="section section testimonials-section">
+        <div class="testimonials-section__wraper">
+            <h2 class="section__title">our clients’ <span>testimonials</span></h2>
+        </div>
+    </section>
+    <section class="section section--white contact-section">
+        <div class="contact-section__wraper">
+            <h2 class="section__title">contact us</h2>
+        </div>
+    </section>
     <script src="./js/script.js"></script>
 </body>
 
