added several sections

--- a/distr/index.html
+++ b/distr/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&amp;subset=cyrillic" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans&amp;subset=cyrillic" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -140,9 +141,17 @@
             </div>
         </div>
     </section>
-    <section class="section section clients-section">
+    <section class="section  clients-section">
         <div class="clients-section__wraper">
             <h2 class="section__title"><span>SOME OF OUR</span> CLIENTS</h2>
+            <div class="clients-section__grid">
+                <a class="clients-section__link" href="#"><img src="../img/clients/1.png" alt="1"></a>
+                <a class="clients-section__link" href="#"><img src="../img/clients/2.png" alt="1"></a>
+                <a class="clients-section__link" href="#"><img src="../img/clients/3.png" alt="1"></a>
+                <a class="clients-section__link" href="#"><img src="../img/clients/4.png" alt="1"></a>
+                <a class="clients-section__link" href="#"><img src="../img/clients/5.png" alt="1"></a>
+
+            </div>
         </div>
     </section>
     <section class="section section--white works-section">
@@ -155,6 +164,20 @@
                 quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa
                 tenetur.
             </p>
+            <div class="works-section__grid">
+                <a class="works-section__card"><img src="../img/works/1.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="../img/works/1.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="../img/works/1.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="../img/works/1.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="../img/works/2.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="../img/works/2.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="../img/works/2.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="../img/works/2.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="../img/works/3.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="../img/works/3.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="../img/works/3.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="../img/works/3.jpg" alt="work"></a>
+            </div>
         </div>
     </section>
     <section class="section section testimonials-section">
@@ -167,6 +190,15 @@
             <h2 class="section__title">contact us</h2>
         </div>
     </section>
+    <footer class="page-footer">
+        <div class="page-footer__social-links">
+            <a class="page-footer__social-link" href=""><i class="fab fa-facebook-f"></i></a>
+            <a class="page-footer__social-link" href=""><i class="fab fa-twitter"></i></a>
+            <a class="page-footer__social-link" href=""><i class="fab fa-google-plus-g"></i></a>
+            <a class="page-footer__social-link" href=""><i class="fab fa-linkedin-in"></i></a>
+            <a class="page-footer__social-link" href=""><i class="fab fa-dribbble"></i></a>
+        </div>
+    </footer>
     <script src="./js/script.js"></script>
 </body>
 
