--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="./distr/css/main.css">
 </head>
 
 <body class="page">
@@ -37,7 +37,7 @@
     <section class="section section--white about-section">
         <div class="about-section__wraper">
             <div class="about-section__item about-section__item--left">
-                <img src="../img/mac.png" alt="">
+                <img src="./distr/img/mac.png" alt="">
             </div>
             <div class="about-section__item about-section__item--right">
                 <h2 class="about-section__item-title">
@@ -62,7 +62,7 @@
             <div class="team-section__grid">
                 <div class="team-section__card">
                     <div class="team-section__card-image-wraper">
-                        <img src="../img/team/1.jpg" alt="man">
+                        <img src="./distr/img/team/1.jpg" alt="man">
                     </div>
                     <h3 class="team-section__card-name">Vlad Ivanov</h3>
                     <p class="team-section__card-post">Designer</p>
@@ -71,7 +71,7 @@
                 </div>
                 <div class="team-section__card">
                     <div class="team-section__card-image-wraper">
-                        <img src="../img/team/2.jpg" alt="man">
+                        <img src="./distr/img/team/2.jpg" alt="man">
                     </div>
                     <h3 class="team-section__card-name">Bogdan Makarov</h3>
                     <p class="team-section__card-post">Manager</p>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="team-section__card">
                     <div class="team-section__card-image-wraper">
-                        <img src="../img/team/3.jpg" alt="man">
+                        <img src="./distr/img/team/3.jpg" alt="man">
                     </div>
                     <h3 class="team-section__card-name">Max Belov</h3>
                     <p class="team-section__card-post">SEO</p>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="team-section__card">
                     <div class="team-section__card-image-wraper">
-                        <img src="../img/team/4.jpg" alt="man">
+                        <img src="./distr/img/team/4.jpg" alt="man">
                     </div>
                     <h3 class="team-section__card-name">Pavel Konov</h3>
                     <p class="team-section__card-post">Copywriter</p>
@@ -145,11 +145,11 @@
         <div class="clients-section__wraper">
             <h2 class="section__title"><span>SOME OF OUR</span> CLIENTS</h2>
             <div class="clients-section__grid">
-                <a class="clients-section__link" href="#"><img src="../img/clients/1.png" alt="1"></a>
-                <a class="clients-section__link" href="#"><img src="../img/clients/2.png" alt="1"></a>
-                <a class="clients-section__link" href="#"><img src="../img/clients/3.png" alt="1"></a>
-                <a class="clients-section__link" href="#"><img src="../img/clients/4.png" alt="1"></a>
-                <a class="clients-section__link" href="#"><img src="../img/clients/5.png" alt="1"></a>
+                <a class="clients-section__link" href="#"><img src="./distr/img/clients/1.png" alt="1"></a>
+                <a class="clients-section__link" href="#"><img src="./distr/img/clients/2.png" alt="1"></a>
+                <a class="clients-section__link" href="#"><img src="./distr/img/clients/3.png" alt="1"></a>
+                <a class="clients-section__link" href="#"><img src="./distr/img/clients/4.png" alt="1"></a>
+                <a class="clients-section__link" href="#"><img src="./distr/img/clients/5.png" alt="1"></a>
 
             </div>
         </div>
@@ -165,18 +165,18 @@
                 tenetur.
             </p>
             <div class="works-section__grid">
-                <a class="works-section__card"><img src="../img/works/1.jpg" alt="work"></a>
-                <a class="works-section__card"><img src="../img/works/1.jpg" alt="work"></a>
-                <a class="works-section__card"><img src="../img/works/1.jpg" alt="work"></a>
-                <a class="works-section__card"><img src="../img/works/1.jpg" alt="work"></a>
-                <a class="works-section__card"><img src="../img/works/2.jpg" alt="work"></a>
-                <a class="works-section__card"><img src="../img/works/2.jpg" alt="work"></a>
-                <a class="works-section__card"><img src="../img/works/2.jpg" alt="work"></a>
-                <a class="works-section__card"><img src="../img/works/2.jpg" alt="work"></a>
-                <a class="works-section__card"><img src="../img/works/3.jpg" alt="work"></a>
-                <a class="works-section__card"><img src="../img/works/3.jpg" alt="work"></a>
-                <a class="works-section__card"><img src="../img/works/3.jpg" alt="work"></a>
-                <a class="works-section__card"><img src="../img/works/3.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="./distr/img/works/1.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="./distr/img/works/1.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="./distr/img/works/1.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="./distr/img/works/1.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="./distr/img/works/2.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="./distr/img/works/2.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="./distr/img/works/2.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="./distr/img/works/2.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="./distr/img/works/3.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="./distr/img/works/3.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="./distr/img/works/3.jpg" alt="work"></a>
+                <a class="works-section__card"><img src="./distr/img/works/3.jpg" alt="work"></a>
             </div>
         </div>
     </section>
@@ -199,7 +199,7 @@
             <a class="page-footer__social-link" href=""><i class="fab fa-dribbble"></i></a>
         </div>
     </footer>
-    <script src="./js/script.js"></script>
+    <script src="./distr/js/script.js" defer></script>
 </body>
 
 </html>
