--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@
     <section class="section section testimonials-section">
         <div class="testimonials-section__wraper">
             <h2 class="section__title">our clients’ <span>testimonials</span></h2>
+            <p class="testimonials-section__text">This book is a treatise on the theory of ethics, very popular during
+                the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in
+                section 1.10.32.</p>
+            <p class="testimonials-section__author">Dean Martin,<span> CEO Acme Inc.</span></p>
         </div>
     </section>
     <section class="section section--white contact-section">
